<resources>
    <string name="app_name">Tube Market</string>
    <string name="youtube_key">AIzaSyCHvKTG-Zx7EW8undEwGQXP9Hh_QXAkv4s</string>
    <string name="ads_app_id">ca-app-pub-4674117082406701~3324833075</string>
    <string name="ad_banner_id">ca-app-pub-4674117082406701/1489297179</string>
    <string name="ad_video_id">ca-app-pub-4674117082406701/1409406124</string>
    <string name="field_required">Field Required</string>
    <string name="inv_email">Invalid Email</string>
    <string name="phone">Phone number</string>
    <string name="login">Login</string>
    <string name="confirm">Confirm</string>
    <string name="notifications">Notifications</string>
    <string name="ok">Ok</string>
    <string name="failed">Failed</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="points">Points</string>
    <string name="no_data_to_show">No data to show</string>
    <string name="name">Name</string>
    <string name="about_us">About us</string>
    <string name="address">Address</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="update_profile">Update Profile</string>
    <string name="details">Details</string>
    <string name="no_image">No Images</string>
    <string name="wait">Wait...</string>
    <string name="user_blocked">User Blocked</string>
    <string name="select_location_on_map">Select Location On Map</string>
    <string name="user_exist">User Exist</string>
    <string name="select">Select</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="show_location_on_map">Show location on map</string>
    <string name="not_ava">Not available</string>
    <string name="egp">EGP</string>
    <string name="logout">Logout</string>
    <string name="get_subscribers_views">Get subscribers, views and likes for your YouTube channel Get more subscribers, promote your channel Sign in with your Google account</string>

    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="campaign">Campaign</string>
    <string name="subscribes">Subscriptions</string>
    <string name="views">Views</string>
    <string name="currency">Coins</string>
    <string name="account">Account</string>
    <string name="gold_profile">Gold profile</string>
    <string name="contact">Contact</string>
    <string name="invite_friends">Invite friends</string>
    <string name="faq">FAQ</string>
    <string name="rate_app">Rate app</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="change_language">Change language</string>
    <string name="add_ads">Add\nAds</string>
    <string name="enter_video_url_here">Enter video link here...</string>
    <string name="add">Add</string>
    <string name="channel_name">Channel name</string>
    <string name="channel_code">Channel code</string>
    <string name="interests">Interests:</string>
    <string name="choose">Choose</string>
    <string name="sports">Sports</string>
    <string name="games">Games</string>
    <string name="cooks">Cooks</string>
    <string name="writes">Writes</string>
    <string name="choose_campaign_type">Choose campaign type</string>
    <string name="get_video_view">Get video view</string>
    <string name="get_subscribers_and_fans_for_your_channel">Get subscribers for your channel</string>
    <string name="new_addition">New addition</string>
    <string name="paste_link"><![CDATA[Paste the link from any video on your channel that you want to boost subscribers or views.People will watch the video and subscribe to your channel.you can get the link by opening your video on youtube<share button> Copy link]]></string>
    <string name="new_campaigns_reviewed">New campaigns are being reviewed, please wait a few hours</string>
    <string name="previous_videos">Previous videos</string>
    <string name="to_change_subscribe_to_golden_account">To change,subscribe to golden account</string>
    <string name="you_have_prepared_the_request">You have prepared the request</string>
    <string name="number_of_subscribers">Number of subscribers</string>
    <string name="number_of_likes">Number of likes</string>
    <string name="required_time_seconds">Required time(seconds)</string>
    <string name="update">Update</string>
    <string name="gold_account_10_discount">Gold Account(10% discount)</string>
    <string name="total_coins">Total coins</string>
    <string name="create_campaign">Create campaign</string>
    <string name="warning_donot_create">Warning, do not create many videos campaigns,and for youtube,it does not count repeated views from same IP in a short period. The length of the video must be at least 45 seconds. Youtube takes 72 hours to update your view history</string>
    <string name="loading">Loading...</string>
    <string name="when_you_subscribe">When you subscribe to the golden account, you will get a 10% discount from the campaign cost.you will get a change th channel link permanently</string>
    <string name="other_payment_methods">Other payment methods</string>
    <string name="note_subscriptions">Note: Subscriptions are renewed automatically according to the specific period weekly-monthly.if you do not want to renew them, you must enter the Google Play store - list - subscriptions -tube market- cancel subscriptions</string>
    <string name="contact_us_if_you_have_special_requests_or_if_you_have_a_problem_with_the_application_or_want_to_purchase_from_the_application_on_the_e_mail">Contact us if you have special requests or if you have a problem with the application or want to purchase from the application on the e-mail:</string>
    <string name="do_not_unsubscribe_or_like_them_we_will_pan_your_account_and_any_subscriptions_made_if_you_unsubscribe_or_like_other_channels">Do not unsubscribe or like them.We will pan your account and any subscriptions made if you unsubscribe or like other channels</string>
    <string name="subscribe">Subscribe</string>
    <string name="next">Next</string>
    <string name="ch_lang">Change language</string>
    <string name="invitation">Invitation</string>
    <string name="invite_your_friend_earn">Invite your friend and earn 1000 coins for each referral by referring the link button(he will also get 1000 coins)</string>
    <string name="the_number_friends">The number of your friends subscribed by your invitation link</string>
    <string name="copy_link">Copy link</string>
    <string name="copied">Copied</string>
    <string name="buy_coin">Buy coin</string>
    <string name="buy_messages">Buy messages</string>
    <string name="subscribe_to_golden_account">Subscribe to golden account</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="enter_an_invitation_code">Enter an invitation code</string>
    <string name="coupons">Coupons</string>
    <string name="watch_video_ads">Watch video ads</string>
    <string name="support">Support</string>
    <string name="enter_code">Enter code</string>
    <string name="seconds">Seconds</string>
    <string name="activate_the_channel_s_profit_in_a_week">Activate The Channel\'s Profit In A Week</string>
    <string name="advertise_your_channel_in_the_app_and_specify_the_number_of_subscribers_and_views_you_want_to_get">Advertise Your Channel In The App And Specify The Number Of Subscribers And Views You Want To Get</string>
    <string name="ads_channel">Advertise Your Channel</string>
    <string name="please_select_type_of_ads">Please select type of ads</string>
    <string name="get_subscribers">Get subscribers</string>
    <string name="get_views">Get views</string>
    <string name="get_subscribers_abd_views">Get subscribers and views</string>
    <string name="get_likes">Get likes</string>
    <string name="enter_number_of_subscribers">Enter number of subscribers</string>
    <string name="estimated_subscribers_interval_time_per_day">Estimated subscribers interval time per day</string>
    <string name="total_amount">Total amount:</string>
    <string name="usd">USD</string>
    <string name="enter_channel_link">Enter channel link</string>
    <string name="enter_number_of_view">Enter number of views</string>
    <string name="choose_watch_time">Choose watch time</string>
    <string name="estimated_views_interval_time_per_day">Estimated views interval time per day</string>
    <string name="enter_number_of_likes">Enter number of likes</string>
    <string name="suc">Success!</string>
    <string name="admin_review">Please wait for the admin to review your video</string>
    <string name="alert">Alert</string>
    <string name="day">Day</string>
    <string name="should_view">You should view video first</string>
    <string name="repeatition">Repetition</string>
    <string name="delete">Delete</string>
    <string name="camp_details">Campaign details</string>
    <string name="viewers_list">Viewers list</string>
    <string name="open_app">Open app</string>
    <string name="get_total">Get total</string>
    <string name="to_create_campaign">To create campaign please add your channel in profile first</string>
    <string name="un_defined">Undefined</string>
    <string name="in_url">invalid url</string>
    <string name="don_t_cancel_the_subscription_n_so_you_won_t_be_banned">Don\'t cancel the subscription\n so you won\'t be banned</string>
    <string name="estimated_time_subscriber_day">Estimated time to reach the number of subscribers 100 common or more on the day</string>
    <string name="estimated_reach_likes">The estimated time to reach 500 likes or more per day</string>
    <string name="the_estimated_time_to_reach_the_number_of_subscribers_100_subscribers_and_200_views_or_more_on_the_day">The estimated time to reach the number of subscribers 100 subscribers and 200 views or more on the day</string>
    <string name="the_estimated_time_to_reach_200_views_or_more_on_the_day">The estimated time to reach 200 views or more on the day</string>
    <string name="message">Message</string>
    <string name="no_messages_to_show">No messages to show</string>
    <string name="enter_link_here">Enter link here ...</string>
    <string name="back">Back</string>
    <string name="coupon_code">Coupon code</string>
    <string name="messages">Messages</string>
    <string name="open_link">Open link</string>
    <string name="close">Close</string>
    <string name="not_enough_coins">Not enough coins</string>
    <string name="special_ad">Special Ad</string>
    <string name="admin">Admin</string>
    <string name="type_a_message">Type a message...</string>
    <string name="my_ads">My ads</string>
    <string name="subsc">Subscribe</string>
    <string name="likes">likes</string>
    <string name="you_will_get_double_points_n_for_watching_the_video">You will get double points\n for watching the video</string>
    <string name="you_will_get_double_points_for_watching_like_and_subscribe_channel">You will get double points for subscribe channel</string>
    <string name="channel_profit">Channel profit</string>
    <string name="watch_hours">4000 watch hours and 1000 subscribers are sent with a lifetime guarantee in a period of 7 to 10 days at a price of $80</string>
    <string name="paypal_email">Email (Paypal)</string>
    <string name="no_more_channel">No more channels</string>
    <string name="terms_and_conditions">Terms and conditions</string>

</resources>