<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/subscriptionFragment"
        android:title="@string/subscribe"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_subscribe"
        android:checked="true"
        />
    <item android:id="@+id/viewsFragment"
        android:title="@string/views"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_views"
        />

    <item android:id="@+id/empty"
        android:title=""
        app:showAsAction="ifRoom"
        />

    <item android:id="@+id/coinsFragment"
        android:title="@string/currency"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_coins"
        />
    <item android:id="@+id/campaignFragment"
        android:title="@string/campaign"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_plus"

        />
<!--    <item android:id="@+id/addAdsFragment"-->
<!--        android:title="@string/add_ads"-->
<!--        app:showAsAction="ifRoom"-->
<!--        android:icon="@drawable/ic_add"-->
<!--        />-->



</menu>