<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <data>
        <variable
            name="value"
            type="String" />

    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".uis.activity_home.fragments.bottom_nav_fragment.AddSubscriptionsFragment"
        android:background="@color/gray0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >



            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/youtube_player_view"
                android:layout_width="match_parent"
                android:layout_height="310dp"
                app:autoPlay="false"
                app:showFullScreenButton="false" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:singleLine="true"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/you_have_prepared_the_request"
                />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/small_rounded_strokk_gray"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:gravity="center_vertical"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:singleLine="true"
                    android:text="@string/views"
                    />
                <Spinner
                    android:id="@+id/spinnerViews"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:backgroundTint="@color/black"
                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/small_rounded_strokk_gray"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:gravity="center_vertical"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:singleLine="true"
                    android:text="@string/required_time_seconds"
                    />
                <Spinner
                    android:id="@+id/spinnerSeconds"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:backgroundTint="@color/black"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/small_rounded_strokk_gray"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:gravity="center_vertical"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:singleLine="true"
                    android:text="@string/gold_account_10_discount"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:text="@string/update"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/small_rounded_strokk_gray"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:gravity="center_vertical"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:singleLine="true"
                    android:text="@string/total_coins"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    />
            </LinearLayout>

            <Button
                android:id="@+id/btnCreateCampaign"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:minWidth="200dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/small_rounded_primary"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:text="@string/create_campaign"
                android:layout_gravity="center_horizontal"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="13sp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/warning_donot_create"
                android:layout_marginBottom="10dp"
                android:lineHeight="26dp"

                />


        </LinearLayout>

    </ScrollView>
</layout>
