<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <variable
            name="model"
            type="com.tubemarket.models.UserModel.ChannelModel" />
        <variable
            name="cost"
            type="String" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/enter_number_of_likes"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edtNumber"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/small_rounded_strokk_gray"
                android:inputType="number"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:maxLength="10"
                />



<!--
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/estimated_reach_likes"
                android:textColor="@color/black"
                android:textSize="14sp" />
-->

           <!-- <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"
                android:visibility="gone"
                android:background="@drawable/small_rounded_strokk_gray">

                <Spinner
                    android:id="@+id/spinnerDays"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:backgroundTint="@color/black" />

            </FrameLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_amount"
                    android:textColor="@color/gray12"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:text="@{cost}"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/usd"
                    android:textColor="@color/gray12"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    />
                <TextView
                    android:id="@+id/tvCalc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:text="@string/get_total"
                    android:visibility="gone"
                    />
            </LinearLayout>

            <EditText
                android:id="@+id/edtUrl"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/small_rounded_strokk_gray"
                android:hint="@string/enter_video_url_here"
                android:inputType="textUri"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="14sp"
                />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:minWidth="200dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/small_rounded_primary"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:text="@string/add"
                android:layout_gravity="center_horizontal"
                />
            <View
                android:layout_width="0dp"
                android:layout_height="60dp"
                />
        </LinearLayout>

    </ScrollView>
</layout>
